name:                feedly-parser
version:             0.1.0.0
synopsis:            Feedly Parser for my own taste
description:         Please see README.md
homepage:            https://github.com/korayal/feedly-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Koray Al
maintainer:          admin@koray.al
copyright:           2016 Koray Al
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , time
  default-language:    Haskell2010

executable fp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , feedly-parser
  default-language:    Haskell2010

test-suite feedly-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , feedly-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/feedly-parser
